override margin on bookmarks (fixes back to no left spacing)

--- a/public/custom.less
+++ b/public/custom.less
@@ -22,6 +22,10 @@ body {
   padding-bottom: 1em;
 }
 
+body[name=bookmarks] .scroll-content {
+  margin: 0px 1px;
+}
+
 
 a[href] {
   text-decoration:none;
